--- a/src/Bookshop/BookshopBundle/Resources/translations/BookshopBundle.en.yml
+++ b/src/Bookshop/BookshopBundle/Resources/translations/BookshopBundle.en.yml
@@ -44,3 +44,24 @@ resetting:
 
             Regards,
             the Team.
+            
+profile:
+    show:
+        title:      Account information
+        first_name: "First name :"
+        last_name:  "Last name :"
+        email:      "Email :"
+        mobile:     "Mobile :"
+        gender:
+          label:      "Gender :"
+          male:       "Male"
+          female:     "Female"
+        education:  "Education :"
+        username:   "Username :"
+    edit:
+        label:    Edit
+        title:    Edit account
+        current_password: "Current password :"
+        
+
+          
