the bug 'same billing and shipping addr' solved + refactorized views

--- a/src/Bookshop/BookshopBundle/Resources/translations/BookshopBundle.en.yml
+++ b/src/Bookshop/BookshopBundle/Resources/translations/BookshopBundle.en.yml
@@ -76,6 +76,7 @@ address:
     country:    "Country"
   edit:
     label:      Edit
+    save:       Save
     title:
       billing: Edit default billing address
       shipping: Edit default shipping address
