--- a/src/Bookshop/BookshopBundle/Resources/translations/BookshopBundle.ro.yml
+++ b/src/Bookshop/BookshopBundle/Resources/translations/BookshopBundle.ro.yml
@@ -77,6 +77,7 @@ address:
     country:    "Țară :"
   edit:
     label:      Modifică
+  save:       Salvează
     title:
       billing:    Modificare adresă prestabilită de facturare
       shipping:   Modificare adresă prestabilită de livrare
