--- a/src/Bookshop/BookshopBundle/Resources/translations/BookshopBundle.en.yml
+++ b/src/Bookshop/BookshopBundle/Resources/translations/BookshopBundle.en.yml
@@ -5,6 +5,14 @@ menu:
     my:
       cart: My Cart
       account: My Account
+    dashboard:
+      home:           Account dashboard
+      account_info:   Account information
+      account_orders: My orders
+      address:
+        billing:    Billing address
+        shipping:  Shipping address
+      
       
 registration:
     check_email: An email has been sent to %email%. It contains an activation link you must click to activate your account.
@@ -66,7 +74,7 @@ profile:
 address:
   show:
     title:
-      billing: Billing address
+      billing:  Billing address
       shipping: Shipping address
     first_name: "First name :"
     last_name:  "Last name :"
@@ -78,5 +86,5 @@ address:
     label:      Edit
     save:       Save
     title:
-      billing: Edit default billing address
+      billing:  Edit default billing address
       shipping: Edit default shipping address
