--- a/src/Bookshop/BookshopBundle/Resources/translations/BookshopBundle.ro.yml
+++ b/src/Bookshop/BookshopBundle/Resources/translations/BookshopBundle.ro.yml
@@ -5,6 +5,13 @@ menu:
     my:
       cart: Cartul meu
       account: Contul meu
+    dashboard:
+      home:           Tablou de bord
+      account_info:   Informații cont
+      account_orders: Comenzile mele
+      address:
+        billing:    Adresa de facturare
+        shipping:  Adresa de livrare
 
 registration:
     check_email: Un email a fost trimis către %email%. Conține un link de activare pe care trebuie să îl accesezi pentru a-ți activa contul.
@@ -77,7 +84,7 @@ address:
     country:    "Țară :"
   edit:
     label:      Modifică
-  save:       Salvează
+    save:       Salvează
     title:
       billing:    Modificare adresă prestabilită de facturare
       shipping:   Modificare adresă prestabilită de livrare
