translations: dashboard index page and menu, validators

--- a/src/Bookshop/BookshopBundle/Resources/translations/BookshopBundle.ro.yml
+++ b/src/Bookshop/BookshopBundle/Resources/translations/BookshopBundle.ro.yml
@@ -13,6 +13,15 @@ menu:
         billing:    Adresa de facturare
         shipping:  Adresa de livrare
 
+dashboard:
+  menu_title: Countul meu
+  title: Tabloul meu de bord
+  greeting: Salutări, %fullname% !
+  info: |
+        Din tabloul tău de bord poți vedea un instantaneu al activității 
+        tale pe cont și mai poți modifica informațiile contului tău.
+        Selecteza un link de mai jos pentru a vedea sau modifica informațiile.
+
 registration:
     check_email: Un email a fost trimis către %email%. Conține un link de activare pe care trebuie să îl accesezi pentru a-ți activa contul.
     confirmed: Felicitări %username%, contul tău a fost confirmat.
@@ -72,6 +81,7 @@ profile:
         current_password: "Parola curentă :"
 
 address:
+  label_book: Agendă adrese
   show:
     title:
       billing:    Adresa de facturare
