--- a/src/Bookshop/BookshopBundle/Resources/translations/BookshopBundle.en.yml
+++ b/src/Bookshop/BookshopBundle/Resources/translations/BookshopBundle.en.yml
@@ -12,7 +12,15 @@ menu:
       address:
         billing:    Billing address
         shipping:  Shipping address
-      
+dashboard:
+  menu_title: My account
+  title: My dashboard
+  greeting: Hello, %fullname% !
+  info: |
+        From your My Account Dashboard you have the ability to view a
+        snapshot of your recent account activity and update your account
+        information. Select a link below to view or edit information.
+
       
 registration:
     check_email: An email has been sent to %email%. It contains an activation link you must click to activate your account.
@@ -72,6 +80,7 @@ profile:
         current_password: "Current password :"
         
 address:
+  label_book: Address Book
   show:
     title:
       billing:  Billing address
